--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
       <button class="particleButton" data-particle="electron">Electron</button>
       <button class="particleButton" data-particle="proton">Proton</button>
       <button class="particleButton" data-particle="neutrino">Neutrino</button>
-    <button class="particleButton" data-particle="photon">Photon</button>
-    <button class="particleButton" data-particle="positron">Positron</button>
-    <button class="particleButton" data-particle="antiproton">Antiproton</button>
-    <button class="particleButton" data-particle="muon">Muon</button>
-    <button class="particleButton" data-particle="antimuon">Antimuon</button>
-    
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-    <script src="js/sketch.js"></script>
-  </div>
+      <button class="particleButton" data-particle="photon">Photon</button>
+      <button class="particleButton" data-particle="positron">Positron</button>
+      <button class="particleButton" data-particle="antiproton">
+        Antiproton
+      </button>
+      <button class="particleButton" data-particle="muon">Muon</button>
+      <button class="particleButton" data-particle="antimuon">Antimuon</button>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+      <script src="js/sketch.js"></script>
+    </div>
   </body>
 </html>
