--- a/index.html
+++ b/index.html
@@ -9,15 +9,11 @@
   <body>
     <div class="particleButtons">
       <button class="particleButton" data-particle="electron">Electron</button>
-      <button class="particleButton" data-particle="proton">Proton</button>
-      <button class="particleButton" data-particle="neutrino">Neutrino</button>
-      <button class="particleButton" data-particle="photon">Photon</button>
       <button class="particleButton" data-particle="positron">Positron</button>
-      <button class="particleButton" data-particle="antiproton">
-        Antiproton
-      </button>
+      <button class="particleButton" data-particle="proton">Proton</button>
+      <button class="particleButton" data-particle="antiproton">Antiproton</button>
       <button class="particleButton" data-particle="muon">Muon</button>
-      <button class="particleButton" data-particle="antimuon">Antimuon</button>
+      <button class="particleButton" data-particle="pion">Pion</button>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
       <script src="js/sketch.js"></script>
     </div>
