--- a/index.html
+++ b/index.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/styles.css">
-  <title>Particle Trigger</title>
-</head>
-<body>
-  <div class="particleButtons">
-    <button class="particleButton" data-particle="electron">Electron</button>
-    <button class="particleButton" data-particle="positron">Positron</button>
-    <button class="particleButton" data-particle="proton">Proton</button>
-    <button class="particleButton" data-particle="antiproton">Antiproton</button>
-    <button class="particleButton" data-particle="muon">Muon</button>
-    <button class="particleButton" data-particle="photon">Photon</button>
-  </div>
-  <footer class="footer">
-    <p>Particle Trigger &copy; Created by Bruno Plastina</p>
-  </footer>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <title>Particle Trigger</title>
+  </head>
+  <body>
+    <img
+      class="background-image"
+      src="../assets/detector.png"
+      alt="Background Image"
+    />
+    <div class="particleButtons">
+      <button class="particleButton" data-particle="electron">Electron</button>
+      <button class="particleButton" data-particle="positron">Positron</button>
+      <button class="particleButton" data-particle="proton">Proton</button>
+      <button class="particleButton" data-particle="antiproton">
+        Antiproton
+      </button>
+      <button class="particleButton" data-particle="muon">Muon</button>
+      <button class="particleButton" data-particle="photon">Photon</button>
+    </div>
+    <footer class="footer">
+      <p>Particle Trigger &copy; Created by Bruno Plastina</p>
+    </footer>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-  <script src="js/sketch.js"></script>
-</body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+    <script src="js/sketch.js"></script>
+  </body>
 </html>
