--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
       </button>
       <button class="particleButton" data-particle="muon">Muon</button>
       <button class="particleButton" data-particle="photon">Photon</button>
+      <button class="particleButton" data-particle="pion">Pion</button>
+      <button class="particleButton" data-particle="kaon">Kaon</button>
+      <button class="particleButton" data-particle="lambda">Lambda</button>
+      <button class="particleButton" data-particle="d0">D0</button>
     </div>
     <footer class="footer">
       <p>Particle Trigger &copy; Created by Bruno Plastina</p>
