--- a/index.html
+++ b/index.html
@@ -2,14 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
     <link rel="stylesheet" href="css/styles.css" />
+    <link
+      rel="icon"
+      href="https://plastina.github.io/particle-trigger/assets/favicon.ico"
+      type="image/x-icon"
+    />
     <title>Particle Trigger</title>
   </head>
   <body>
     <img
       class="background-image"
-      src="../assets/detector.png"
+      src="https://plastina.github.io/particle-trigger/assets/detector.png"
       alt="Background Image"
     />
     <div class="particleButtons">
@@ -31,7 +39,9 @@
       <p>Particle Trigger &copy; Created by Bruno Plastina</p>
     </footer>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"
+    ></script>
     <script src="js/sketch.js"></script>
   </body>
 </html>
